--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,9 +7,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/dashboard/schedule" routerLink="/dashboard/schedule">Manage Schedules</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="/dashboard/coupon" routerLink="/dashboard/coupon">Manage Coupons</a>
-            </li>
+            </li> -->
         </ul>
         <button type="submit" class="btn btn-info" style="margin-left:55%" (click)="logout()">Logout</button>
     </div>
