--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">Wega Airways</a></h1>
+        <h1><a href="#intro" class="scrollto">Cognizant Airways</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>-->
       </div>
@@ -10,8 +10,8 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu"><a href="/home">Home</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Contact</a></li>        
+          <li><a href="/home">About Us</a></li>
+          <li><a href="/home">Contact</a></li>        
         </ul>
       </nav><!-- #nav-menu-container -->
 
