--- a/src/app/manage/manage.component.html
+++ b/src/app/manage/manage.component.html
@@ -4,9 +4,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/home" routerLink="/home">Search Flights </a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="/home/booking" routerLink="/home/booking">Booking Flight </a>
-            </li>
+            </li> -->
             <li class="nav-item">
                 <a class="nav-link" href="/home/booking/history" routerLink="/home/booking/history">Booking History</a>
             </li>
